--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <string name="light_theme">light</string>
+    <string name="dark_theme">dark</string>
+
 </resources>
